---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 27.01.2025
  Changes:
    - Changelog.
    - Recipes when bobs are enabled.
    - Achivements the survive hit points name change.
  Features:
    - Made Nanobots2 work as old nanobots.
  Scripting:
    - Restructured locals files.
---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 26.01.2025
  Modding:
    - Added seedling conversion to bobs.
    - Par's broken locales on bobs recipes.
    - Fixed bob logistic science issue on my roboports.
    - Restored bob's recipes.
  Features:
    - Added charging_station_count_affected_by_quality to roboports.
    - Repatable migration.
  Scripting:
    - Fixed until.lua
  Info:
    - Some issue with bobs at this point i can't do much with bobs being in beta testing.
    - Basicly me trying to put plaster on a wound while the knife is still in it. 
  Credit:
    - Thanks a lot @Pez for all the help.
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 24.01.2025
  Bugfixes:
    - Crash with transport drones.
  Info:
    - Need to learn on getting a better understanding on coding better.
    - Tho that aint easy when over tired.
  Features:
    - Repeatable migration.
  Credit:
    - @jurgy for helping with solving the crash in 0.3.12.
    - @stringweasel for helping with solving the crash in 0.3.12.
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 24.01.2025
  Modding:
    - Tried adding Bobs Advanced logistic science to roboports.
    - Changed how to unlocked armour from start.
    - Armour should now have bob-like recipes.
    - Removed bobs tungsten items from armour MK9 & MK10.
    - Fixed duplicates with bobs untill the fix is done on there end.
  Features:
    - Repeatable migration.